--- a/slider-popup-main/index.html
+++ b/slider-popup-main/index.html
@@ -9,13 +9,13 @@
     <title>Popup</title>
 </head>
 <body>
-<div class="username" style="display: none;">
+<div class="username">
     <form action="#">
         <input type="text" id="username" placeholder="Input username">
         <input type="submit" id="submit" value="Send">
     </form>
 </div>
-<div class="container" style="display: flex;">
+<div class="container">
     <h1 class="title"></h1>
     <div class="images">
         <a href="./assets/images/big/1.jpg" >
